# pro

./: .env.example  .gitignore  LICENSE  Procfile  README.md  STYLE_GUIDE.md  compat.py  dream_data.json  dream_mode.py  forclaude.md  grammar_filters.py  lora_utils.py  memory_simple.py  mesh_cli.py  message_utils.py  meta_controller.py  morphology.py  pro_engine.py  pro_forecast.py  pro_identity.py  pro_memory.py  pro_memory_pool.py  pro_mesh.py  pro_meta.py  pro_metrics.py  pro_predict.py  pro_rag.py  pro_rag_embedding.py  pro_sequence.py  pro_spawn.py  pro_tg.py  pro_tune.py  pyproject.toml  quantum_memory.py  requirements.txt  semantic_collider.py  train_utils.py  trainer.py
api/: __init__.py  app.py  chat.py  vector_store.py
autoadapt/: __init__.py  meta_spawn.json
cron/: self_reflect_job.py
d/: pro_evo.py  pro_memory_pool.py  pro_spawn.py  trainer.py
datasets/: Cain.md  SUPPERTIME (v2.0).md  lines01.txt  smalltalk.txt
docs/: reasoning.md  self_reflect.md  time_fold_demo.ipynb  token_filtering.md
examples/: hotswap_lora.py  layer_cache_example.py  memristor_demo.ipynb  quant4_demo.py
memory/: __init__.py  demo_memory_graph.py  lattice.py  layer_cache.py  memory_graph.py  memory_lattice.py  pooling.py  reinforce_retriever.py  storage.py  store.py
metrics/: __init__.py  timing.py
quantum/: __init__.py  attention_backend.py  quant4.py
resonance/: hypergraph.py  p2p_resonance.py
router/: __init__.py  policy.py  subgraph.py
scripts/: train.py  weightless_demo.py
self_reflect/: __init__.py  trainer.py
tests/: test_adapter_usage.py  (+66 more)
(+32 files in other folders)
