[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "smalltalk"
version = "0.1.0"
description = "Self-assembling conversational engine"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "aiosqlite",
    "watchfiles",
    "autograd",
    "aiohttp"
]

[project.optional-dependencies]
quantum = ["qiskit"]
quant4 = ["bitarray"]
